[package]
name = "erc20"
version = "4.0.0-alpha.3"
authors = ["[your_name] <[your_email]>"]
edition = "2021"
publish = false

[dependencies]
ink = { git = "https://github.com/paritytech/ink/", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

[lib]
name = "erc20"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []